--- a/home.html
+++ b/home.html
@@ -9,9 +9,14 @@
   <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
+  <div id="home" class="content">
   <header>
     <img src="assets/logo.svg" alt="Rocket.Q Logo"/>
   </header>
+
+  <div id="bg">
+  </div>
+
   <main>
     <div class="container">
       <section>
@@ -31,7 +36,7 @@
 
         <section>
           <h2>Crie sua própria sala, de forma fácil</h2>
-          <a href="create-room.html">
+          <a href="create-room.html" class="button outlined">
             <img src="assets/users.svg" alt="Criar Sala">
             Criar Sala
           </a>
@@ -39,5 +44,6 @@
       </div>
     </div>
   </main>
+</div>
 </body>
 </html>
