--- a/room.html
+++ b/room.html
@@ -77,6 +77,49 @@
                 </a>
               </div>
             </div>
+
+            <div class="question-wrapper">
+              <div class="question-content">
+                <div class="user">
+                  <img src="assets/avatar.svg" alt=""/>
+                </div>
+                <div class="question">
+                  <p>O que é JavaScript?</p>
+                </div>
+              </div>
+              <div class="actions">
+                <a href="#" class="check">
+                  <img src="assets/check.svg" alt="Marcar como lida"/>
+                  Marcar como lida
+                </a>
+                <a href="#" class="delete">
+                  <img src="assets/trash.svg" alt="Excluir"/>
+                  Excluir
+                </a>
+              </div>
+            </div>
+
+            <div class="question-wrapper">
+              <div class="question-content">
+                <div class="user">
+                  <img src="assets/avatar.svg" alt=""/>
+                </div>
+                <div class="question">
+                  <p>Oque é TypeScript?</p>
+                </div>
+              </div>
+              <div class="actions">
+                <a href="#" class="check">
+                  <img src="assets/check.svg" alt="Marcar como lida"/>
+                  Marcar como lida
+                </a>
+                <a href="#" class="delete">
+                  <img src="assets/trash.svg" alt="Excluir"/>
+                  Excluir
+                </a>
+              </div>
+            </div>
+
           </div>
         </section>
 
